--- a/ОИД/ЛР2/(3)styles.css
+++ b/ОИД/ЛР2/(3)styles.css
@@ -1,4 +1,4 @@
-body { /*TODO: найти фото*/
+body {
     background: url('https://media.tenor.com/-WbAlYLRb-YAAAAC/makima-bean.gif');
     background-size: cover;
 }
