--- a/СРС/css/styles.css
+++ b/СРС/css/styles.css
@@ -259,3 +259,56 @@ h3 {
     left: 0;
     top: 8%;
 }
+
+
+.item {
+    background-color: #938e94;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    width: 300px;
+    max-width: 100%;
+    height: 220px;
+    text-align: left;
+    margin: 1%;
+    margin-bottom: 2%;
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
+
+.item:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+}
+
+.item img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 8px;
+}
+
+.card-content {
+    padding: 16px;
+}
+
+.card-title {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 8px;
+    color: #fff;
+    padding-left: 16px;
+}
+
+.card-price {
+    font-size: 1.1rem;
+    color: #fff;
+    font-weight: bold;
+    margin-bottom: 8px;
+    padding-left: 16px;
+}
+
+.catalog {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 5% 5%;
+}
